@@ -14,8 +14,6 @@ class intltool_in_taskgen(TaskGen.task_gen):
 	def __init__(self, *k):
 		TaskGen.task_gen.__init__(self, *k)
 		self.source  = ''
-		self.inst_var = ''
-		self.inst_dir = ''
 		self.flags   = ''
 		self.podir   = 'po'
 		self.intlcache = '.intlcache'
@@ -37,14 +35,13 @@ class intltool_in_taskgen(TaskGen.task_gen):
 			task.set_inputs(node)
 			task.set_outputs(node.change_ext(''))
 
-			task.inst_var = self.inst_var
-			task.inst_dir = self.inst_dir
+			tsk.install_path = self.install_path
 
 class intltool_po_taskgen(TaskGen.task_gen):
 	def __init__(self, *k, **kw):
 		TaskGen.task_gen.__init__(self, *k)
 		self.chmod = 0644
-		self.inst_var_default = 'LOCALEDIR'
+		self.default_install_path = '${LOCALEDIR}'
 		self.appname = kw.get('appname', 'set_your_app_name')
 		self.podir = ''
 		self.tasks=[]
@@ -55,7 +52,7 @@ class intltool_po_taskgen(TaskGen.task_gen):
 			filename = out.name
 			(langname, ext) = os.path.splitext(filename)
 			inst_file = langname + os.sep + 'LC_MESSAGES' + os.sep + self.appname + '.mo'
-			Build.bld.install_as(self.inst_var, inst_file, out.abspath(self.env), chmod=self.chmod)
+			Build.bld.install_as(self.install_path, out.abspath(self.env), chmod=self.chmod)
 
 		linguas = self.path.find_resource(os.path.join(self.podir, 'LINGUAS'))
 		if linguas:
